--- a/stylesheet.css
+++ b/stylesheet.css
@@ -186,9 +186,9 @@ html {
 
 
 #pfp {
-    height: 300px;
+    /* height: 300px; */
     width: 300px;
-    aspect-ratio: 300/300;
+    /* aspect-ratio: 300/300; */
     border-radius: 20px;
     background-size:cover;
 }
